Fixed alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     background-color: white;
 }
 
+.container{
+display: flex;
+flex-direction: row;
+
+
+padding-bottom: 100px;
+}
+
 #react{
     background-color: azure;
     color: crimson;
@@ -20,7 +28,7 @@ margin: 5px;
 padding-left: 5px;
 display: inline-block;
 position: relative;
-top: 30px;
+justify-content: center;
 
 
 }
@@ -41,9 +49,7 @@ top: 30px;
     margin: 5px;
     
     position: relative;
-    top: -190px;
-    right: -200px;
-    
+
     
     
     }
@@ -62,8 +68,7 @@ top: 30px;
         border-width: 4px;
         margin: 5px;
         position: relative;
-        top: -400px;
-        right: -550px;
+
         
     }
     #html{
@@ -84,8 +89,7 @@ top: 30px;
         text-align: center;
         display: inline-block;
         position: relative;
-        top: -620px;
-        left: 900px;
+   ;
     }
     #navigationbar{
         height: 40px;
